feat: initialize FastAPI todo app with user auth and database setup

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,18 @@
 [project]
 name = "pyapi"
 version = "0.1.0"
-description = "Add your description here"
+description = "A FastAPI-based Todo application with user authentication and CRUD operations"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "fastapi[standard]>=0.115.12",
-    "union>=0.1.182",
+    "uvicorn>=0.23.2",
+    "sqlalchemy>=2.0.20",
+    "pydantic>=2.3.0",
+    "pydantic[email]>=2.3.0",
+    "pymysql>=1.1.0",
+    "passlib>=1.7.4",
+    "bcrypt>=4.0.1",
+    "python-jose>=3.3.0",
+    "python-multipart>=0.0.6"
 ]
